--- a/public/styles/component/layout.module.scss
+++ b/public/styles/component/layout.module.scss
@@ -20,3 +20,17 @@
 text-decoration:none;
 color:#f5f5f5;
 }
+.toTopButton{
+    position:fixed;
+    width:60px;
+	height:60px;
+	bottom:20px;
+	right:10px;
+	background-color:#e65100;
+	color:#FFF;
+    border-radius:50px;
+    border:none;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+
+}
